# linearmodel

./: CMakeLists.txt
conf/: linearmodel.xml
demo/: CMakeLists.txt  test  test.cpp
include/: featengine.h  linearmodel.h
src/: CMakeLists.txt  Makefile  build.sh  featengine.cpp  linearmodel.cpp
