PROJECT(linearmodel)
SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_ROOT_PATH}/lib/")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_ROOT_PATH}/demo/")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/thirdparty/include")
LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/thirdparty/lib")
LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/lib")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(demo)


