PROJECT(linearmodel)
SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_ROOT_PATH}/lib/")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_ROOT_PATH}/demo/")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/thirdparty/include")
LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/thirdparty/lib")
LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/lib")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(demo)


